--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
         --first-background: #393939;
         --second-background: #2b2b2b;
         --third-background: #5b5b5b;
+        --transparent-background: #000000c0;
+
         --shadow-color: #222222;
         --header-background: linear-gradient(340deg, hsl(180 100% 20% / 1),
                                                      hsl(240 100% 20% / 1),
@@ -31,17 +33,18 @@
         --first-background: #f0f2f4;
         --second-background: #FFFFFF;        
         --third-background: #e2e2e2;
+        --transparent-background: #888888c0;
 
         --shadow-color: #a2a2a2;
         --header-background: linear-gradient(340deg, hsl(180 60% 60% / 1),
                                                      hsl(240 60% 60% / 1),
                                                      hsl(300 60% 60% / 1));
 
-        --global-font-color: #424242;
+        --global-font-color: #5E5E5E;
         --global-font-color-alternative: #ffffff;
         
         --button-color-primary: #5557b3;
-        --button-color-secundary: #5557b3;
+        --button-color-secundary: #55b360;
     }
 }
 
@@ -77,6 +80,10 @@ section.topNavigationBar {
 
 h2.alternateColor {
     color: var(--global-font-color-alternative);
+}
+
+h3 {
+    font-size: 14pt;
 }
 
 img.headerLogo {
@@ -134,6 +141,7 @@ img.pageCardImage {
     height: 12vw;
     border-radius: 1rem;
     object-fit: cover;
+    pointer-events: none;
 }
 
 section.pageCardDetails {
@@ -142,11 +150,13 @@ section.pageCardDetails {
     row-gap: 1rem;
     column-gap: 1rem;
     align-items: center;
+    pointer-events: none;
 }
 
 section.pageCardDetailsText {
     display: grid;
     row-gap: 1rem;
+    pointer-events: none;
 }
 
 h4.pageCardShortDescription {
@@ -169,6 +179,7 @@ a.pageCardPlayButton {
     display: flex;
     align-items: center;
     justify-content: center;
+    pointer-events: all;
 }
 a.pageCardPlayButton:hover {
     box-shadow: 2px 2px 0 1px #2c7735;
@@ -177,6 +188,135 @@ a.pageCardPlayButton:hover {
 a.pageCardPlayButton:active {
     box-shadow: 0px 0px 0 1px #2c7735;
     transform: translate(4px, 4px);
+}
+
+/* Details Window =========================================================== */
+
+div.windowBackground {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--transparent-background);
+    backdrop-filter: blur(5px);
+}
+
+#projectDetails > article {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 50vh;
+    width: 70vw;
+    transform: translate(22.5%, 50%);
+    background-color: var(--second-background);
+    border-radius: 2rem;
+    box-shadow: 0 0 8px 1px var(--shadow-color);
+    display: flex;
+}
+
+#projectDetails > article > section {
+    padding: 2rem;
+    width: 100%;
+    display: flex;
+    row-gap: 2rem;
+    flex-direction: column;
+}
+
+#projectDetails > article > img {
+    width: 50%;
+    height: 100%;
+    border-radius: 2rem;
+    object-fit: cover;
+}
+
+#projectDetails > article > section > header {
+    display: flex;
+    justify-content: space-between;
+}
+
+#projectDetails > article > section > header > a {
+    height: 24px;
+    width: 92px;
+    font-size: 13pt;
+    background-color: var(--button-color-secundary);
+    color: var(--global-font-color-alternative);
+    padding: 1rem;
+    cursor: pointer;
+    box-shadow: 4px 4px 0 1px #2c7735;
+    border: none;
+    border-radius: 1rem;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#projectDetails > article > section > header > a:hover {
+    box-shadow: 2px 2px 0 1px #2c7735;
+    transform: translate(2px, 2px);
+}
+#projectDetails > article > section > header > a:active {
+    box-shadow: 0px 0px 0 1px #2c7735;
+    transform: translate(4px, 4px);
+}
+
+#projectDetails > article > section > header > div {
+    display: grid;
+    row-gap: 1rem;
+}
+
+#projectDetails > article > section > main {
+    line-height: 24px;
+    text-align: justify;
+}
+
+#projectDetails > article > section > main > p > a {
+    color: rgb(128, 171, 245);
+}
+
+button#closeProjectDetails {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 32px;
+    height: 32px;
+    background-color: transparent;
+    transform: translate(85vw, 21vh);
+}
+
+@media(max-width: 1024px) {
+
+    #projectDetails > article {
+        width: 90vw;
+        transform: translate(6%, 50%);
+    }
+
+    button#closeProjectDetails {
+        transform: translate(95vw, 21vh);
+    }
+}
+
+@media(max-width: 540px) {
+
+    #projectDetails > article {
+        display: grid;
+        height: fit-content;
+        transform: translate(6%, 10vh);
+    }
+
+    #projectDetails > article > section {
+        width: unset;
+        padding: 1.5rem;
+    }
+
+    #projectDetails > article > img {
+        width: 100%;
+        height: 25vh;
+    }
+
+    button#closeProjectDetails {
+        transform: translate(93vw, 6vh);
+    }
 }
 
 /* Footer =================================================================== */
@@ -262,7 +402,7 @@ section.bottom-footer {
     }
 
     li.pageCardBody:hover {
-        transform: scale(1);
-        box-shadow: 0px 0px 6px 0px var(--shadow-color);
+        transform: unset;
+        box-shadow: unset;
     }
 }
