--- a/projectDetails.css
+++ b/projectDetails.css
@@ -2,10 +2,20 @@ div.windowBackground {
     position: fixed;
     left: 0;
     top: 0;
-    height: 100%;
-    width: 100%;
+    height: inherit;
+    width: inherit;
     background-color: var(--transparent-background);
     backdrop-filter: blur(5px);
+}
+
+#projectDetails {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
 }
 
 #projectDetails > article {
@@ -106,9 +116,11 @@ button#closeProjectDetails {
 @media(max-width: 768px) {
 
     #projectDetails > article {
+        position: unset;
         display: grid;
         height: fit-content;
-        transform: translate(6%, 10vh);
+        transform: none;
+        z-index: 99;
     }
 
     #projectDetails > article > section {
