--- a/style.css
+++ b/style.css
@@ -77,14 +77,19 @@ body {
 section.topNavigationBar {
     display: flex;
     align-items: center;
-    padding: 10px 4vw;
+    padding: 4vh 4vw;
     column-gap: 1rem;
-    width: 100%;
-    height: 50px;
-    position: fixed;
-    background-color: var(--first-background);
-    box-shadow: 0px 6px 4px 0px var(--shadow-color);
+    height: 40px;
+    position: absolute;
     z-index: 99;
+}
+
+h1 {
+    font-size: 20pt;
+}
+
+h1, h2 {
+    text-shadow: 2px 2px 5px var(--shadow-color);
 }
 
 h2.alternateColor {
@@ -136,7 +141,6 @@ header > section.bottomHeader {
 }
 
 .topHeaderText {
-    text-shadow: 2px 2px 5px var(--shadow-color);
     font-size: 25pt;
     padding: 8vh 4vw;
     z-index: 0;
@@ -163,7 +167,7 @@ header > section.bottomHeader {
     }
 
     #pageHeader > section > div {
-        transform: translate(15vw, -6vh) rotate(23deg);
+        transform: translate(15vw, 15vh) rotate(23deg);
     }
 
     #pageHeader > section:nth-child(2) > h3 {
